# aws-sigv4-proxy

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  cliff.toml  deny.toml
.github/workflows/: audit.yaml  ci.yaml  codecov.yaml  publish-release.yaml
src/: client.rs  config.rs  credentials.rs  lib.rs  main.rs  proxy.rs  signals.rs  signer.rs  utils.rs
tests/: .gitignore  docker-compose.yaml
tests/scripts/: prepare-test-env.sh
