[package]
name = "aws-sigv4-proxy"
version = "0.1.10"
authors = ["Oleksii Karpenko <alexkarpenko@yahoo.com>"]
description = "Proxy to apply AWS SigV4 to requests"
rust-version = "1.95"
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.102"
aws-config = { version = "1.8.16", features = ["behavior-version-latest"] }
aws-credential-types = "1.2.14"
aws-sigv4 = { version = "1.4.3" }
aws-smithy-runtime = { version = "1.11.1", default-features = false }
aws-smithy-runtime-api = { version = "1.12.0", default-features = false }
clap = { version = "4.6.1", features = ["derive", "env"] }
http = "1.4.0"
http-body-util = "0.1.3"
hyper = { version = "1.9.0", default-features = false, features = ["http1"] }
hyper-rustls = { version = "0.27.9", default-features = false, features = [
    "http1",
    "aws-lc-rs",
    "rustls-native-certs",
    "tls12",
    "webpki-roots",
] }
hyper-util = { version = "0.1.20", default-features = false, features = [
    "client",
    "client-legacy",
    "http1",
    "server-auto",
    "server-graceful",
    "tokio",
] }
rustls = { version = "0.23.38", features = ["aws-lc-rs"], default-features = false }
tokio = { version = "1.52.1", default-features = false, features = ["macros", "rt-multi-thread", "signal"] }
tokio-rustls = { version = "0.26.4", features = ["aws-lc-rs"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
webpki-roots = "1.0.7"

[dev-dependencies]
aws-sdk-s3 = { version = "1.130.0", default-features = false, features = ["behavior-version-latest", "default-https-client", "rt-tokio"] }
rstest = "0.26.1"
testcontainers = { version = "0.27.3", default-features = false, features = ["aws-lc-rs"] }
